--- a/kochitabi/requirements.txt
+++ b/kochitabi/requirements.txt
@@ -10,6 +10,7 @@ dj-database-url==0.4.2
 dj-static==0.0.6
 Django==1.11.7
 django-filter==1.1.0
+django-rest-multiple-models==1.8.2
 django-toolbelt==0.0.1
 djangorestframework==3.7.3
 docutils==0.14
